# onnxruntime-builder

./: CLAUDE.md  flake.nix
docs/: build-reference.md  nix-build-discipline.md  siof-patches.md  static-cuda-hang.md
ort-wrapper/: Cargo.toml  README.md  build.rs
ort-wrapper/benches/: inference.rs
ort-wrapper/src/: embedded.rs  lib.rs  main.rs
ort-wrapper/tests/: integration.rs  smoke.rs  usage.rs  validation.rs
patches/: cuda-static-provider.patch  musl-cstdint.patch  musl-execinfo.patch  providers-shared-static.patch  static-datatype-loop.patch  static-init-bridge.patch  static-init-common.patch  static-init-cpu.patch  static-init-provider.patch  static-tensorshape-loop.patch
